--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,14 +19,17 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-fonts:
-  - family: Poppins
-    fonts:
-      - asset: fonts/Poppins-Bold.ttf
-        weight: 700
-      - asset: fonts/Poppins-Medium.ttf
-        weight: 500
-      - asset: fonts/Poppins-Regular.ttf
-        weight: 400 
-      - asset: fonts/Poppins-SemiBold.ttf
-        weight: 600
+  assets:
+    - assets/images/
+
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: fonts/Poppins-Bold.ttf
+          weight: 700
+        - asset: fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: fonts/Poppins-Regular.ttf
+          weight: 400 
+        - asset: fonts/Poppins-SemiBold.ttf
+          weight: 600
