--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.2.0
+  path: ^1.9.1
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
