--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.2.0
+  intl: ^0.20.2
   path: ^1.9.1
   provider: ^6.1.5
   sqflite: ^2.4.2
