--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -47,8 +47,8 @@ jobs:
       - name: Analyze code
         run: flutter analyze
 
-      # - name: Run tests
-      #   run: flutter test
+      - name: Run tests
+        run: flutter test
 
       - name: Build APK (debug)
         run: flutter build apk --debug
