--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.2.0
   intl: ^0.20.2
+  mocktail: ^1.0.4
   path: ^1.9.1
   provider: ^6.1.5
   sqflite: ^2.4.2
