--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   path: ^1.9.1
   provider: ^6.1.5
   sqflite: ^2.4.2
+  toggle_switch: ^2.3.0
 
 dev_dependencies:
   flutter_test:
