--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   mocktail: ^1.0.4
   path: ^1.9.1
   provider: ^6.1.5
+  shared_preferences: ^2.5.3
   sqflite: ^2.4.2
+  toggle_switch: ^2.3.0
 
 dev_dependencies:
   flutter_test:
