--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   sqflite: ^2.4.2
   toggle_switch: ^2.3.0
   url_launcher: ^6.3.2
+  workmanager: ^0.8.0
 
 dev_dependencies:
   flutter_test:
