--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
+  app_settings: ^6.1.1
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^19.3.1
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.2.0
@@ -20,6 +22,7 @@ dependencies:
   sqflite: ^2.4.2
   toggle_switch: ^2.3.0
   url_launcher: ^6.3.2
+  workmanager: ^0.8.0
 
 dev_dependencies:
   flutter_test:
