--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: hidroly
 description: "Track your water intake."
 publish_to: 'none'
-version: 0.1.0-alpha
+version: 1.0.0
 
 environment:
   sdk: ^3.8.1
