--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.2.0
+  haptic_feedback: ^0.5.1+1
   intl: any
   mocktail: ^1.0.4
   path: ^1.9.1
