--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   app_settings: ^6.1.1
+  fl_chart: ^1.1.0
   flutter:
     sdk: flutter
   flutter_local_notifications: ^19.4.0
