--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,23 @@
 name: hidroly
 description: "Track your water intake."
 publish_to: 'none'
-version: 1.2.1+5
+version: 1.3.0+6
 
 environment:
   sdk: ^3.8.1
 
 dependencies:
   app_settings: ^6.1.1
+  fl_chart: ^1.1.0
   flutter:
     sdk: flutter
   flutter_local_notifications: ^19.4.0
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.2.0
+  haptic_feedback: ^0.5.1+1
   intl: any
+  logger: ^2.6.1
   mocktail: ^1.0.4
   path: ^1.9.1
   provider: ^6.1.5
